# mcplex

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mcplex/: __init__.py  config.py  memory_tools.py  ollama_tools.py  server.py  vision_tools.py
tests/: test_config.py  test_memory_tools.py  test_ollama_tools.py  test_vision_tools.py
